// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`limit events on the card 120×24: the card never pushes the heat map off; hits show or are counted, and Enter lists them 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 ◀ a [this week]  this month   days   weeks   months  d ▶                            * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ───────────────────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $2.42   1.1× your 30-day avg                     │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M  in 95K · out 43K · cache 1.5M              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · claude-sonnet-4-6 49%              │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18                     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   personal 5h hit 100% at 10:00 (waited 30m)       │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 12:00 (waited 30m)       │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 14:00 (waited 30m)       │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          personal 5h hit 100% at 15:00 (waited 30m)       │
                                                           │          +4 more                                          │
                                                           ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
 LIMIT EVENTS · Thu Dec 3 · today                                                                              esc back 
   personal 5h hit 100% at 10:00 (waited 30m)                                                                           
   personal 5h hit 100% at 12:00 (waited 30m)                                                                           
   personal 5h hit 100% at 14:00 (waited 30m)                                                                           
   personal 5h hit 100% at 15:00 (waited 30m)                                                                           
   work weekly passed 80% at 08:00                                                                                      
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   esc back   f filter   1-4/tab views   c account   ? help            MCP ● 2 agents 
"
`;

exports[`limit events on the card 105×24: the card never pushes the heat map off; hits show or are counted, and Enter lists them 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 ◀ a [this week]  this month   days   weeks   months  d ▶             * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $2.42   1.1× your 30-day avg      │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M                              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · +1                  │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   4 limit hits · enter lists them   │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                            │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                            │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰────────────────────────────────────────────╯
                                                                                                         
 LIMIT EVENTS · Thu Dec 3 · today                                                               esc back 
   personal 5h hit 100% at 10:00 (waited 30m)                                                            
   personal 5h hit 100% at 12:00 (waited 30m)                                                            
   personal 5h hit 100% at 14:00 (waited 30m)                                                            
   personal 5h hit 100% at 15:00 (waited 30m)                                                            
   work weekly passed 80% at 08:00                                                                       
   work weekly passed 80% at 08:30                                                                       
   work weekly passed 80% at 09:00                                                                       
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   esc back   f filter   1-4/tab views   ? help         MCP ● 2 agents 
"
`;

exports[`limit events on the card 80×24: the card never pushes the heat map off; hits show or are counted, and Enter lists them 1`] = `
" tokenhud   1   2 History   3   4                  all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 ◀ a [this week]  this month   days   weeks   months  d ▶              f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more                       
     Jun   Jul     Aug       Sep     Oct     Nov       Dec                      
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
                                                                                
 Thu Dec 3 · today  $2.42  1.1× avg  4 limit hits · 4 at 80%  enter lists them  
                                                                                
 LIMIT EVENTS · Thu Dec 3 · today                                      esc back 
   personal 5h hit 100% at 10:00 (waited 30m)                                   
   personal 5h hit 100% at 12:00 (waited 30m)                                   
   personal 5h hit 100% at 14:00 (waited 30m)                                   
   personal 5h hit 100% at 15:00 (waited 30m)                                   
   work weekly passed 80% at 08:00                                              
────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   esc back   ? help           MCP ● 2 agents 
"
`;

exports[`105×50 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 ◀ a [this week]  this month   days   weeks   months  d ▶             * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $2.42   1.1× your 30-day avg      │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M                              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · +1                  │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   personal 5h hit 100% at 10:02     │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          waited 1h18m                      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          work fable w… passed 80% at 09:05 │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰────────────────────────────────────────────╯
                                                                                                         
 date         input  output    cache        cost vs 30-day avg            top model         accounts     
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, perso…
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, co…
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, perso…
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work         
 ────────────────────────────────────────────────────────────────────────────────────────────────────────
 4 days        481K    229K     8.7M     $11.42*                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                            
 1-4/tab views   c account   x settings   ? help   q quit                                 MCP ● 2 agents 
"
`;

exports[`105×50 History, the weeks tab, last week selected 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts            scope all accounts ▾   ● live · 5s 
─────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                         
 ◀ a  this week   this month   days  [weeks]  months  d ▶             * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Nov 26 ───────────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $1.34*   0.6× your 30-day avg     │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M                              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · +2          │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26      │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                              │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                            │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                            │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰────────────────────────────────────────────╯
                                                                                                         
 week           input  output    cache        cost vs 30-day avg            top model         accounts   
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, per…
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, wor…
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, wor…
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, per…
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, wor…
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, …
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, wor…
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, wor…
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, …
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, wor…
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, wor…
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, wor…
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, per…
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, wor…
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, wor…
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, wor…
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, wor…
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, code…
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, wor…
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, pers…
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, per…
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, per…
 Jun 8–14        233K    104K     4.1M      $4.70* ━━━━━━━━━━━━━━━━━━  0.3× gpt-5.5           codex, wor…
 ────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                       
                                                                                                         
                                                                                                         
                                                                                                         
                                                                                                         
─────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                            
 1-4/tab views   c account   x settings   ? help   q quit                                 MCP ● 2 agents 
"
`;

exports[`120×45 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 ◀ a [this week]  this month   days   weeks   months  d ▶                            * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ───────────────────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $2.42   1.1× your 30-day avg                     │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M  in 95K · out 43K · cache 1.5M              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · claude-sonnet-4-6 49%              │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18                     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   personal 5h hit 100% at 10:02 (waited 1h18m)     │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          work fable weekly passed 80% at 09:05            │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                           │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
 date         input  output    cache        cost vs 30-day avg            top model         accounts                    
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal             
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, codex, work       
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, personal, work       
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work                        
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 4 days        481K    229K     8.7M     $11.42*                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                                           
 1-4/tab views   c account   x settings   ? help   q quit                                                MCP ● 2 agents 
"
`;

exports[`120×45 History, the weeks tab, last week selected 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 ◀ a  this week   this month   days  [weeks]  months  d ▶                            * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Nov 26 ──────────────────────────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $1.34*   0.6× your 30-day avg                    │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M  in 75K · out 30K · cache 1.3M              │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · claude-sonnet-4-6 20% · +1 │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26                     │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                                             │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                           │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                           │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
 week           input  output    cache        cost vs 30-day avg            top model         accounts                  
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, personal, work     
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal     
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work, personal     
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, personal, work     
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal     
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, codex, work     
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal     
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, work, personal     
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, codex, work     
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, work, personal     
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, work, personal     
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal     
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal, work     
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, work, personal     
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, work, personal     
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, work, personal     
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, work, personal     
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, codex, personal     
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal     
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, personal, codex     
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, personal, work     
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work     
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                                      
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                                           
 1-4/tab views   c account   x settings   ? help   q quit                                                MCP ● 2 agents 
"
`;

exports[`80×24 History 1`] = `
" tokenhud   1   2 History   3   4                  all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 ◀ a [this week]  this month   days   weeks   months  d ▶              f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more                       
     Jun   Jul     Aug       Sep     Oct     Nov       Dec                      
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
                                                                                
 Thu Dec 3 · today  $2.42  1.1× avg  1 limit hit · 1 at 80%  enter lists them   
                                                                                
 date         input  output    cache        cost vs 30-day avg                  
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1×       
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3×       
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5×       
 ───────────────────────────────────────────────────────────────────────────────
 4 days        481K    229K     8.7M     $11.42*                                
────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter   ? help           MCP ● 2 agents 
"
`;

exports[`80×24 History, the weeks tab, last week selected 1`] = `
" tokenhud   1   2 History   3   4                  all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────
                                                                                
 ◀ a  this week   this month   days  [weeks]  months  d ▶              f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more                       
     Jun   Jul     Aug       Sep     Oct     Nov       Dec                      
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                        
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■                          
                                                                                
 Thu Nov 26  $1.34*  0.6× avg  1.4M tokens  claude-opus-4-8                     
                                                                                
 week           input  output    cache        cost vs 30-day avg                
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2×     
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1×     
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9×     
 ───────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                              
────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter   ? help           MCP ● 2 agents 
"
`;

exports[`160×50 History 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                                                                   scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                
 ◀ a [this week]  this month   days   weeks   months  d ▶                                                                    * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ──────────────────────────────────────────────────────────╮                     
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $2.42   1.1× your 30-day avg                                        │                     
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.6M  in 95K · out 43K · cache 1.5M                                 │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   gpt-5.5 51% · claude-sonnet-4-6 49%                                 │                     
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts codex $1.23 · personal $1.18                                        │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   personal 5h hit 100% at 10:02 (waited 1h18m)                        │                     
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          work fable weekly passed 80% at 09:05                               │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                                              │                     
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰──────────────────────────────────────────────────────────────────────────────╯                     
                                                                                                                                                                
 date         input  output    cache        cost vs 30-day avg            top model         accounts                                                            
 Thu Dec 3      95K     43K     1.5M       $2.42 ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, personal                                                     
 Wed Dec 2     170K     78K     3.3M       $5.20 ━━━━━━━━━━━━━━━━━━  2.3× claude-opus-4-8   personal, codex, work                                               
 Tue Dec 1     181K     83K     3.0M       $3.35 ━━━━━━━━━━━━━━━━━━  1.5× gpt-5.5           codex, personal, work                                               
 Mon Nov 30     35K     24K     939K      $0.46* ━━━━━━━━━━━━━━━━━━  0.2× claude-sonnet-4-6 work                                                                
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 4 days        481K    229K     8.7M     $11.42*                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                                                                                   
 1-4/tab views   c account   x settings   ? help   q quit                                                                                        MCP ● 2 agents 
"
`;

exports[`160×50 History, the weeks tab, last week selected 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                                                                   scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                                                                
 ◀ a  this week   this month   days  [weeks]  months  d ▶                                                                    * not all tokens priced · f filter 
 LAST 26 WEEKS · daily cost           less ■ ■ ■ ■ ■ more  ╭─ Thu Nov 26 ─────────────────────────────────────────────────────────────────╮                     
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ cost     $1.34*   0.6× your 30-day avg                                       │                     
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ tokens   1.4M  in 75K · out 30K · cache 1.3M                                 │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-opus-4-8 80% · claude-sonnet-4-6 20% · claude-mystery-9 0%   │                     
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts work $1.08* · personal $0.26                                        │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   none                                                                │                     
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                                              │                     
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                                              │                     
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰──────────────────────────────────────────────────────────────────────────────╯                     
                                                                                                                                                                
 week           input  output    cache        cost vs 30-day avg            top model         accounts                                                          
 Nov 30–Dec 6    481K    229K     8.7M     $11.42* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, personal, work                                             
 Nov 23–29       756K    344K    14.1M     $18.00* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal                                             
 Nov 16–22       845K    368K    15.6M     $13.61* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, work, personal                                             
 Nov 9–15        762K    359K    14.3M     $14.00* ━━━━━━━━━━━━━━━━━━  0.9× gpt-5.6-sol       codex, personal, work                                             
 Nov 2–8         750K    353K    12.9M     $18.04* ━━━━━━━━━━━━━━━━━━  1.1× gpt-5.5           codex, work, personal                                             
 Oct 26–Nov 1    633K    300K    11.7M     $14.02* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   personal, codex, work                                             
 Oct 19–25       768K    382K    14.5M     $18.49* ━━━━━━━━━━━━━━━━━━  1.2× gpt-5.5           codex, work, personal                                             
 Oct 12–18       642K    294K    11.1M     $12.24* ━━━━━━━━━━━━━━━━━━  0.8× gpt-5.5           codex, work, personal                                             
 Oct 5–11        453K    207K     8.1M     $11.55* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   personal, codex, work                                             
 Sep 28–Oct 4    748K    371K    13.6M     $16.82* ━━━━━━━━━━━━━━━━━━  1.1× claude-opus-4-8   codex, work, personal                                             
 Sep 21–27       559K    258K    10.3M     $11.82* ━━━━━━━━━━━━━━━━━━  0.7× gpt-5.5           codex, work, personal                                             
 Sep 14–20       549K    250K     9.8M      $9.74* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal                                             
 Sep 7–13        494K    224K     8.9M     $10.11* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, personal, work                                             
 Aug 31–Sep 6    558K    250K    10.4M      $7.88* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Aug 24–30       391K    177K     7.3M      $8.06* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Aug 17–23       551K    269K    10.6M      $9.34* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.5           codex, work, personal                                             
 Aug 10–16       507K    227K     9.1M     $13.85* ━━━━━━━━━━━━━━━━━━  0.9× claude-opus-4-8   codex, work, personal                                             
 Aug 3–9         323K    146K     5.7M      $7.14* ━━━━━━━━━━━━━━━━━━  0.4× gpt-5.6-sol       codex, work, personal                                             
 Jul 27–Aug 2    416K    195K     7.3M     $11.22* ━━━━━━━━━━━━━━━━━━  0.7× claude-opus-4-8   codex, work, personal                                             
 Jul 20–26       286K    127K     5.1M      $6.15* ━━━━━━━━━━━━━━━━━━  0.4× claude-sonnet-4-6 work, codex, personal                                             
 Jul 13–19       385K    182K     6.8M      $9.93* ━━━━━━━━━━━━━━━━━━  0.6× gpt-5.6-sol       codex, work, personal                                             
 Jul 6–12        237K    105K     4.3M      $5.15* ━━━━━━━━━━━━━━━━━━  0.3× claude-opus-4-8   work, personal, codex                                             
 Jun 29–Jul 5    308K    140K     5.3M      $6.99* ━━━━━━━━━━━━━━━━━━  0.4× claude-opus-4-8   codex, personal, work                                             
 Jun 22–28       260K    111K     4.6M      $7.50* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Jun 15–21       274K    127K     4.7M      $7.23* ━━━━━━━━━━━━━━━━━━  0.5× gpt-5.5           codex, personal, work                                             
 Jun 8–14        233K    104K     4.1M      $4.70* ━━━━━━━━━━━━━━━━━━  0.3× gpt-5.5           codex, work, personal                                             
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 26 weeks       13.2M    6.1M   239.0M    $285.03*                                                                                                              
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                                                                                   
 1-4/tab views   c account   x settings   ? help   q quit                                                                                        MCP ● 2 agents 
"
`;

exports[`with costs hidden, tokens take their place: heat map, ratios, card and table 1`] = `
" tokenhud   1 Overview   2 History   3 Models   4 Accounts                           scope all accounts ▾   ● live · 5s 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
 ◀ a [this week]  this month   days   weeks   months  d ▶                                                      f filter 
 LAST 26 WEEKS · daily tokens         less ■ ■ ■ ■ ■ more  ╭─ Thu Dec 3 · today ───────────────────────────────────────╮
     Jun   Jul     Aug       Sep     Oct     Nov       Dec │ tokens   1.6M   0.7× your 30-day avg                      │
 Mon ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │          in 95K · out 43K · cache 1.5M                    │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ models   claude-sonnet-4-6 67% · gpt-5.5 33%              │
 Wed ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ accounts personal 1.1M · codex 547K                       │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■   │ limits   personal 5h hit 100% at 10:02 (waited 1h18m)     │
 Fri ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │          work fable weekly passed 80% at 09:05            │
     ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     │                                                           │
 Sun ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ╰───────────────────────────────────────────────────────────╯
                                                                                                                        
 date         input  output    cache   tokens vs 30-day avg            top model         accounts                       
 Thu Dec 3      95K     43K     1.5M     1.6M ━━━━━━━━━━━━━━━━━━  0.7× claude-sonnet-4-6 personal, codex                
 Wed Dec 2     170K     78K     3.3M     3.5M ━━━━━━━━━━━━━━━━━━  1.6× claude-opus-4-8   personal, work, codex          
 Tue Dec 1     181K     83K     3.0M     3.2M ━━━━━━━━━━━━━━━━━━  1.5× claude-sonnet-4-6 personal, work, codex          
 Mon Nov 30     35K     24K     939K     998K ━━━━━━━━━━━━━━━━━━  0.5× claude-sonnet-4-6 work                           
 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 4 days        481K    229K     8.7M     9.4M                                                                           
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 a/d period   w/s row   enter open   f filter                                                                           
 1-4/tab views   c account   x settings   ? help   q quit                                                MCP ● 2 agents 
"
`;

exports[`colours at 120×45, by role: the strip, the highlighted week, the selected row, the bars 1`] = `
"[head/bg/b] tokenhud [-/bg] [dim/bg] 1 [mute/bg]Overview [-/bg] [head/tab/b] 2 History [-/bg] [dim/bg] 3 [mute/bg]Models [-/bg] [dim/bg] 4 [mute/bg]Accounts [-/bg] [-/bg]                         [dim/bg]scope [fg/bg]all accounts ▾[live/bg]   ● [dim/bg]live · 5s 
[border/bg]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg]                                                                                                                        
[-/bg] [dim/bg]◀ a [mute/bg] this week [-/bg] [mute/bg] this month [-/bg] [mute/bg] days [-/bg] [head/tab/b][weeks][-/bg] [mute/bg] months [dim/bg] d ▶[-/bg]                            [dim/bg]* not all tokens priced · [head/bg/b]f [dim/bg]filter 
[head/bg/b] LAST 26 WEEKS · daily cost[-/bg]           [dim/bg]less [heat0/bg]■ [heat1/bg]■ [heat2/bg]■ [heat3/bg]■ [tokens|heat4/bg]■ [dim/bg]more [-/bg] [border/bg]╭─ [head/bg/b]Thu Nov 26[border/bg] ──────────────────────────────────────────────╮
[-/bg]     [dim/bg]Jun[-/bg]   [dim/bg]Jul[-/bg]     [dim/bg]Aug[-/bg]       [dim/bg]Sep[-/bg]     [dim/bg]Oct[-/bg]     [dim/bg]Nov[-/bg]       [dim/bg]Dec[-/bg] [border/bg]│[-/bg] [mute/bg]cost     [cost|mid/bg/b]$1.34*[dim/bg]   0.6× your 30-day avg[-/bg]                    [border/bg]│
[dim/bg] Mon[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat0/bg]■[-/bg] [head/bg/b]■[-/bg] [heat1/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]tokens   [tokens|heat4/bg]1.4M[dim/bg]  in 75K · out 30K · cache 1.3M[-/bg]              [border/bg]│
[-/bg] [-/bg]    [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [head/bg/b]■[-/bg] [heat3/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]models   [fg/bg]claude-opus-4-8 80% · claude-sonnet-4-6 20% · +1[-/bg] [border/bg]│
[dim/bg] Wed[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [head/bg/b]■[-/bg] [tokens|heat4/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]accounts [fg/bg]work $1.08* · personal $0.26[-/bg]                     [border/bg]│
[-/bg] [-/bg]    [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat3/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [head/bg/b]■[-/bg] [heat2/bg]■[-/bg]   [border/bg]│[-/bg] [mute/bg]limits   [dim/bg]none[-/bg]                                             [border/bg]│
[dim/bg] Fri[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [tokens|heat4/bg]■[-/bg] [heat3/bg]■[-/bg] [head/bg/b]■[-/bg]     [border/bg]│[-/bg]                                                           [border/bg]│
[-/bg] [-/bg]    [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat3/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [head/bg/b]■[-/bg]     [border/bg]│[-/bg]                                                           [border/bg]│
[dim/bg] Sun[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat2/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat1/bg]■[-/bg] [heat3/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat1/bg]■[-/bg] [heat0/bg]■[-/bg] [heat2/bg]■[-/bg] [head/bg/b]■[-/bg]     [border/bg]╰───────────────────────────────────────────────────────────╯
[-/bg]                                                                                                                        
[-/bg] [dim/bg]week        [-/bg] [dim/bg]  input[-/bg] [dim/bg] output[-/bg] [dim/bg]   cache[-/bg] [dim/bg]       cost[-/bg] [dim/bg]vs 30-day avg     [-/bg] [-/bg]     [-/bg] [dim/bg]top model        [-/bg] [dim/bg]accounts                  
[-/bg] [fg/bg]Nov 30–Dec 6[-/bg] [tokens|heat4/bg]   481K[-/bg] [tokens|heat4/bg]   229K[-/bg] [tokens|heat4/bg]    8.7M[-/bg] [cost|mid/bg/b]    $11.42*[-/bg] [cost|mid/bg]━━━━━━━━━━[empty/bg]━━━━━━━━[-/bg] [mute/bg] 1.2×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work     
[-/bg] [head/sel/b]Nov 23–29   [-/sel] [tokens|heat4/sel]   756K[-/sel] [tokens|heat4/sel]   344K[-/sel] [tokens|heat4/sel]   14.1M[-/sel] [cost|mid/sel/b]    $18.00*[-/sel] [cost|mid/sel]━━━━━━━━━[empty/sel]━━━━━━━━━[-/sel] [mute/sel] 1.1×[-/sel] [fg/sel]gpt-5.5          [-/sel] [mute/sel]codex, work, personal     
[-/bg] [fg/bg]Nov 16–22   [-/bg] [tokens|heat4/bg]   845K[-/bg] [tokens|heat4/bg]   368K[-/bg] [tokens|heat4/bg]   15.6M[-/bg] [cost|mid/bg/b]    $13.61*[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Nov 9–15    [-/bg] [tokens|heat4/bg]   762K[-/bg] [tokens|heat4/bg]   359K[-/bg] [tokens|heat4/bg]   14.3M[-/bg] [cost|mid/bg/b]    $14.00*[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Nov 2–8     [-/bg] [tokens|heat4/bg]   750K[-/bg] [tokens|heat4/bg]   353K[-/bg] [tokens|heat4/bg]   12.9M[-/bg] [cost|mid/bg/b]    $18.04*[-/bg] [cost|mid/bg]━━━━━━━━━[empty/bg]━━━━━━━━━[-/bg] [mute/bg] 1.1×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Oct 26–Nov 1[-/bg] [tokens|heat4/bg]   633K[-/bg] [tokens|heat4/bg]   300K[-/bg] [tokens|heat4/bg]   11.7M[-/bg] [cost|mid/bg/b]    $14.02*[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]personal, codex, work     
[-/bg] [fg/bg]Oct 19–25   [-/bg] [tokens|heat4/bg]   768K[-/bg] [tokens|heat4/bg]   382K[-/bg] [tokens|heat4/bg]   14.5M[-/bg] [cost|mid/bg/b]    $18.49*[-/bg] [cost|mid/bg]━━━━━━━━━[empty/bg]━━━━━━━━━[-/bg] [mute/bg] 1.2×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Oct 12–18   [-/bg] [tokens|heat4/bg]   642K[-/bg] [tokens|heat4/bg]   294K[-/bg] [tokens|heat4/bg]   11.1M[-/bg] [cost|mid/bg/b]    $12.24*[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.8×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Oct 5–11    [-/bg] [tokens|heat4/bg]   453K[-/bg] [tokens|heat4/bg]   207K[-/bg] [tokens|heat4/bg]    8.1M[-/bg] [cost|mid/bg/b]    $11.55*[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]personal, codex, work     
[-/bg] [fg/bg]Sep 28–Oct 4[-/bg] [tokens|heat4/bg]   748K[-/bg] [tokens|heat4/bg]   371K[-/bg] [tokens|heat4/bg]   13.6M[-/bg] [cost|mid/bg/b]    $16.82*[-/bg] [cost|mid/bg]━━━━━━━━[empty/bg]━━━━━━━━━━[-/bg] [mute/bg] 1.1×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Sep 21–27   [-/bg] [tokens|heat4/bg]   559K[-/bg] [tokens|heat4/bg]   258K[-/bg] [tokens|heat4/bg]   10.3M[-/bg] [cost|mid/bg/b]    $11.82*[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Sep 14–20   [-/bg] [tokens|heat4/bg]   549K[-/bg] [tokens|heat4/bg]   250K[-/bg] [tokens|heat4/bg]    9.8M[-/bg] [cost|mid/bg/b]     $9.74*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Sep 7–13    [-/bg] [tokens|heat4/bg]   494K[-/bg] [tokens|heat4/bg]   224K[-/bg] [tokens|heat4/bg]    8.9M[-/bg] [cost|mid/bg/b]    $10.11*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Aug 31–Sep 6[-/bg] [tokens|heat4/bg]   558K[-/bg] [tokens|heat4/bg]   250K[-/bg] [tokens|heat4/bg]   10.4M[-/bg] [cost|mid/bg/b]     $7.88*[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.5×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Aug 24–30   [-/bg] [tokens|heat4/bg]   391K[-/bg] [tokens|heat4/bg]   177K[-/bg] [tokens|heat4/bg]    7.3M[-/bg] [cost|mid/bg/b]     $8.06*[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.5×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Aug 17–23   [-/bg] [tokens|heat4/bg]   551K[-/bg] [tokens|heat4/bg]   269K[-/bg] [tokens|heat4/bg]   10.6M[-/bg] [cost|mid/bg/b]     $9.34*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Aug 10–16   [-/bg] [tokens|heat4/bg]   507K[-/bg] [tokens|heat4/bg]   227K[-/bg] [tokens|heat4/bg]    9.1M[-/bg] [cost|mid/bg/b]    $13.85*[-/bg] [cost|mid/bg]━━━━━━━[empty/bg]━━━━━━━━━━━[-/bg] [mute/bg] 0.9×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Aug 3–9     [-/bg] [tokens|heat4/bg]   323K[-/bg] [tokens|heat4/bg]   146K[-/bg] [tokens|heat4/bg]    5.7M[-/bg] [cost|mid/bg/b]     $7.14*[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.4×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Jul 27–Aug 2[-/bg] [tokens|heat4/bg]   416K[-/bg] [tokens|heat4/bg]   195K[-/bg] [tokens|heat4/bg]    7.3M[-/bg] [cost|mid/bg/b]    $11.22*[-/bg] [cost|mid/bg]━━━━━━[empty/bg]━━━━━━━━━━━━[-/bg] [mute/bg] 0.7×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Jul 20–26   [-/bg] [tokens|heat4/bg]   286K[-/bg] [tokens|heat4/bg]   127K[-/bg] [tokens|heat4/bg]    5.1M[-/bg] [cost|mid/bg/b]     $6.15*[-/bg] [cost|mid/bg]━━━[empty/bg]━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.4×[-/bg] [fg/bg]claude-sonnet-4-6[-/bg] [mute/bg]work, codex, personal     
[-/bg] [fg/bg]Jul 13–19   [-/bg] [tokens|heat4/bg]   385K[-/bg] [tokens|heat4/bg]   182K[-/bg] [tokens|heat4/bg]    6.8M[-/bg] [cost|mid/bg/b]     $9.93*[-/bg] [cost|mid/bg]━━━━━[empty/bg]━━━━━━━━━━━━━[-/bg] [mute/bg] 0.6×[-/bg] [fg/bg]gpt-5.6-sol      [-/bg] [mute/bg]codex, work, personal     
[-/bg] [fg/bg]Jul 6–12    [-/bg] [tokens|heat4/bg]   237K[-/bg] [tokens|heat4/bg]   105K[-/bg] [tokens|heat4/bg]    4.3M[-/bg] [cost|mid/bg/b]     $5.15*[-/bg] [cost|mid/bg]━━━[empty/bg]━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.3×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]work, personal, codex     
[-/bg] [fg/bg]Jun 29–Jul 5[-/bg] [tokens|heat4/bg]   308K[-/bg] [tokens|heat4/bg]   140K[-/bg] [tokens|heat4/bg]    5.3M[-/bg] [cost|mid/bg/b]     $6.99*[-/bg] [cost|mid/bg]━━━[empty/bg]━━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.4×[-/bg] [fg/bg]claude-opus-4-8  [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Jun 22–28   [-/bg] [tokens|heat4/bg]   260K[-/bg] [tokens|heat4/bg]   111K[-/bg] [tokens|heat4/bg]    4.6M[-/bg] [cost|mid/bg/b]     $7.50*[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.5×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work     
[-/bg] [fg/bg]Jun 15–21   [-/bg] [tokens|heat4/bg]   274K[-/bg] [tokens|heat4/bg]   127K[-/bg] [tokens|heat4/bg]    4.7M[-/bg] [cost|mid/bg/b]     $7.23*[-/bg] [cost|mid/bg]━━━━[empty/bg]━━━━━━━━━━━━━━[-/bg] [mute/bg] 0.5×[-/bg] [fg/bg]gpt-5.5          [-/bg] [mute/bg]codex, personal, work     
[-/bg] [rule/bg]───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg] [mute/bg]26 weeks    [-/bg] [tokens|heat4/bg]  13.2M[-/bg] [tokens|heat4/bg]   6.1M[-/bg] [tokens|heat4/bg]  239.0M[-/bg] [cost|mid/bg/b]   $285.03*[-/bg]                    [-/bg]     [-/bg] [-/bg]                 [-/bg] [-/bg]                          
[border/bg]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[-/bg] [head/bg/b]a/d[dim/bg] period   [head/bg/b]w/s[dim/bg] row   [head/bg/b]enter[dim/bg] open   [head/bg/b]f[dim/bg] filter   [-/bg]                                                                        
[-/bg] [head/bg/b]1-4/tab[dim/bg] views   [head/bg/b]c[dim/bg] account   [head/bg/b]x[dim/bg] settings   [head/bg/b]?[dim/bg] help   [head/bg/b]q[dim/bg] quit   [-/bg]                                             [dim/bg]MCP [live/bg]●[dim/bg] 2 agents "
`;
